--- a/views/details.hbs
+++ b/views/details.hbs
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <title>Document</title>
+    <title>Dashboard</title>
     <style>
       .pagination {
         text-align: center;
@@ -41,29 +41,29 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-browser-edge" viewBox="0 0 16 16">
+        <a class="nav-link" href="/student/dashboard"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-browser-edge" viewBox="0 0 16 16">
   <path d="M9.482 9.341c-.069.062-.17.153-.17.309 0 .162.107.325.3.456.877.613 2.521.54 2.592.538h.002c.667 0 1.32-.18 1.894-.519A3.838 3.838 0 0 0 16 6.819c.018-1.316-.44-2.218-.666-2.664l-.04-.08C13.963 1.487 11.106 0 8 0A8 8 0 0 0 .473 5.29C1.488 4.048 3.183 3.262 5 3.262c2.83 0 5.01 1.885 5.01 4.797h-.004v.002c0 .338-.168.832-.487 1.244l.006-.006a.594.594 0 0 1-.043.041Z"/>
   <path d="M.01 7.753a8.137 8.137 0 0 0 .753 3.641 8 8 0 0 0 6.495 4.564 5.21 5.21 0 0 1-.785-.377h-.01l-.12-.075a5.45 5.45 0 0 1-1.56-1.463A5.543 5.543 0 0 1 6.81 5.8l.01-.004.025-.012c.208-.098.62-.292 1.167-.285.129.001.257.012.384.033a4.037 4.037 0 0 0-.993-.698l-.01-.005C6.348 4.282 5.199 4.263 5 4.263c-2.44 0-4.824 1.634-4.99 3.49Zm10.263 7.912c.088-.027.177-.054.265-.084-.102.032-.204.06-.307.086l.042-.002Z"/>
   <path d="M10.228 15.667a5.21 5.21 0 0 0 .303-.086l.082-.025a8.019 8.019 0 0 0 4.162-3.3.25.25 0 0 0-.331-.35c-.215.112-.436.21-.663.294a6.367 6.367 0 0 1-2.243.4c-2.957 0-5.532-2.031-5.532-4.644.002-.135.017-.268.046-.399a4.543 4.543 0 0 0-.46 5.898l.003.005c.315.441.707.821 1.158 1.121h.003l.144.09c.877.55 1.721 1.078 3.328.996Z"/>
 </svg></a>
       </li>
       <li class="nav-item">
-       <a href="/branch" class="nav-link" style="float: left; margin-left: 2px">
+       <a href="/student/branch" class="nav-link" style="float: left; margin-left: 2px">
       <button type="button" class="btn btn-info ">Branch</button></a>
       </li>
       <li class="nav-item" >
-        <a class="nav-link" href="/subject" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Subject</button></a>
+        <a class="nav-link" href="/student/subject" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Subject</button></a>
       </li>
             <li class="nav-item" >
-        <a class="nav-link" href="/teacher" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Teacher</button></a>
+        <a class="nav-link" href="/student/teacher" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Teacher</button></a>
       </li>
             <li class="nav-item" >
-        <a class="nav-link" href="parent" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Parent</button></a>
+        <a class="nav-link" href="/student/parent" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Parent</button></a>
       </li>
 
     </ul>
      <div style=" margin-left: 10px;"> 
-  <a href="/logout">
+  <a href="/auth/logout">
     <button type="button" class="btn btn-info"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/>
   <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
@@ -80,11 +80,8 @@
   <table class="table table-light table-hover" >
     <thead>
       <div class="flex">
-      
-   {{!-- <form method="get" action="/dashboard"> --}}
-
 </div>
-{{!-- </form> --}}
+
       <tr align="center">
                <div class="dropdown" style="float: right;">
         <th>NAME
@@ -92,8 +89,8 @@
         <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown">
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="/dashboard/?order=asc">Ascending</a></li>
-          <li><a class="dropdown-item" href="/dashboard/?order=desc">Descending</a></li>
+          <li><a class="dropdown-item" href="/student/dashboard/?order=asc">Ascending</a></li>
+          <li><a class="dropdown-item" href="/student/dashboard/?order=desc">Descending</a></li>
         </ul>
       </div>  
         </th>
@@ -104,16 +101,15 @@
         <th>ACTION</th>
       </tr>
 
-      <a href="/newStudent" style="float: right;">
+      <a href="/student/addstudent" style="float: right;">
     <button type="button" class="btn btn-info "><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z">
 </svg> New Student</button></a>
-<form method="post" action="/search">
+<form method="post" action="/student/search">
 <button type="submit" class="btn btn-info" style="float: right; margin-right:50px" >Go</button>
   <div class="form-outline" style="float: right; margin-right:2pxpx">
     <input type="search" id="form1" class="form-control" name="search"/>
     <label class="form-label" for="form1">Search</label>
-    {{!-- <button type="button" class="btn btn-primary">Go</button> --}}
   </div>
 </form>
     </thead>
@@ -127,7 +123,7 @@
         <td>{{this.phone}}</td>
         <td>{{this.dob}}</td>
        
-        <td><a href="/update/{{this._id}}"><button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+        <td><a href="/student/update/{{this._id}}"><button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
   <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
 </svg> Edit</button></a>
       <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-toggle="tooltip" title="Delete"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
@@ -147,12 +143,12 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a href="/delete/{{this._id}}"><button type="button" class="btn btn-danger">Delete</button></a>
+          <a href="/student/delete/{{this._id}}"><button type="button" class="btn btn-danger">Delete</button></a>
       </div>
     </div>
   </div>
 </div>
-        <a href="/view/{{this._id}}"><button type="button" class="btn btn-success" data-bs-toggle="tooltip" title="View"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+        <a href="/student/view/{{this._id}}"><button type="button" class="btn btn-success" data-bs-toggle="tooltip" title="View"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
   <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
   <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
 </svg> View</button></a>
@@ -166,38 +162,16 @@
 
 <div class="pagination">
  {{!-- {{#if 'currentPage !== 1 && previousPage !== 1'}}  --}}
-  <a href="/dashboard/?page=1"><<</a>
+  <a href="/student/dashboard/?page=1"><<</a>
  {{!-- {{/if}} --}}
-  <a href="/dashboard/?page={{currentPage}}" class="active">{{currentPage}}</a>
+  <a href="/student/dashboard/?page={{currentPage}}" class="active">{{currentPage}}</a>
  {{#if demolim}} 
-   <a href="/dashboard/?page={{nextPage}}">{{nextPage}}</a>
+   <a href="/student/dashboard/?page={{nextPage}}">{{nextPage}}</a>
  {{/if}}  
  {{!-- {{#if 'lastPage<=currentPage'}}   --}}
-  <a href="/dashboard/?page={{lastPage}}">>></a> 
+  <a href="/student/dashboard/?page={{lastPage}}">>></a> 
  {{!-- {{/if}}  --}}
 </div>
-
-
-{{!-- {{#if fil}}
-<div class="pagination">
- {{!-- {{#if 'currentPage !== 1 && previousPage !== 1'}}  --}}
-  {{!-- <a href="/search/?page=1"><<</a>
- {{!-- {{/if}} --}}
-  {{!-- <a href="/search/?page={{currentPage}}" class="active">{{currentPage}}</a>
- {{#if demolim}} 
-   <a href="/search/?page={{nextPage}}">{{nextPage}}</a>
- {{/if}}  
- {{!-- {{#if 'lastPage<=currentPage'}}   --}}
-  {{!-- <a href="/search/?page={{lastPage}}">>></a> 
- {{!-- {{/if}}  --}}
-{{!-- </div> --}}
-{{!-- {{/if}} --}} 
-{{!-- </section> --}}
-<!-- The Modal -->
-<!-- Button trigger modal -->
-{{!-- <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> --}}
 
 </body>
 </html>
