--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -7,10 +7,10 @@
     <div class="card card-body text-center">
       <h1><i class="fab fa-node-js fa-3x"></i></h1>
       <p>Create an account or login</p>
-      <a href="/reg" class="btn btn-primary btn-block mb-2"
+      <a href="/auth/reg" class="btn btn-primary btn-block mb-2"
         >Register</a
       >
-      <a href="/login" class="btn btn-secondary btn-block">Login</a>
+      <a href="/auth/login" class="btn btn-secondary btn-block">Login</a>
     </div>
   </div>
 </div>
