--- a/views/parent.hbs
+++ b/views/parent.hbs
@@ -11,10 +11,16 @@
 <body>
 
 <section class="vh-100">
-
+   <div style="float:left; margin-left: 100px; margin-top:50px;"> 
+ <a href="/student/dashboard">
+    <button type="button" class="btn btn-info"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+</svg> Back</button>
+  </a>  
+  </div>
   <div class="container h-100" style="margin-top : 100px">
     <div class=" align-items-center justify-content-center h-100">
-        <form method="post" action="/parent" class="was-validated">
+        <form method="post" action="/student/parent" class="was-validated">
             <h1 align="center" class="text-primary">New Parent</h1>
         <div class="form-outline mb-4">
             <label class="form-label" for="validateField">Name</label>
