--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,14 +2,14 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/"><button type="button" class="btn btn-info ">Home</button></a>
+        <a class="nav-link" href="/auth"><button type="button" class="btn btn-info ">Home</button></a>
       </li>
       <li class="nav-item">
-       <a href="/login" class="nav-link" style="float: left; margin-left: 2px">
+       <a href="/auth/login" class="nav-link" style="float: left; margin-left: 2px">
       <button type="button" class="btn btn-info ">Login</button></a>
       </li>
       <li class="nav-item" >
-        <a class="nav-link" href="/reg" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Register</button></a>
+        <a class="nav-link" href="/auth/reg" style="float: left; margin-left: 2px"> <button type="button" class="btn btn-info ">Register</button></a>
       </li>
    
     </ul> 
