--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,7 +5,7 @@
   <div class="container h-100" style="margin-top : 100px">
     <div class="align-items-center justify-content-center h-100">
    
-        <form method="post" action="/register" class="was-validated">
+        <form method="post" action="/auth/register" class="was-validated">
             <h1 align="center" class="text-primary">Register</h1>
 
           {{#if msg}} 
@@ -14,28 +14,18 @@
               <strong>Already registred!</strong>
             </div>
           {{/if}}
-          {{!-- Email input --}}
           <div class="form-outline mb-4">
             <label class="form-label" for="validateemail">Email address</label>
             <input type="email" id="validateemail" class="form-control form-control-lg" name="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" autofocus required/>
-            {{!-- <div class="valid-feedback">Success</div> --}}
-          {{!-- {{#if msg}}  <div class="invalid-feedback">User is already registred</div> {{/if}} --}}
           </div>
-
-
-           {{!-- Password input --}}
           <div class="form-outline mb-4">
             <label class="form-label" for="form1Example23">Password</label>
             <input type="password" id="validatepassword" class="form-control form-control-lg" name="password" pattern=".{8,12}" required title="8 to 12 characters"/>
-            {{!-- <div class="valid-feedback">Success</div> --}}
-            {{!-- <div class="invalid-feedback">Enter valid password</div> --}}
           </div>
         <br>
         <div class="form-outline mb-4">
-            <button type="submit" class="btn btn-primary btn-lg btn-block" >REGISTER</button>
-           
+            <button type="submit" class="btn btn-primary btn-lg btn-block" >REGISTER</button> 
           </div>
-
         <br>
         </form>
      
