--- a/views/update.hbs
+++ b/views/update.hbs
@@ -14,10 +14,17 @@
   </head>
 
 <body>
+     <div style="float:left; margin-left: 100px; margin-top:50px;"> 
+ <a href="/student/dashboard">
+    <button type="button" class="btn btn-info"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+</svg> Back</button>
+  </a>  
+  </div>
 <section class="vh-100">
   <div class="container h-100" style="margin-top : 100px">
     <div class="row d-flex align-items-center justify-content-center h-100">
-        <form method="post" action="/updated/{{data._id}}" class="was-validated">
+        <form method="post" action="/student/updated/{{data._id}}" class="was-validated">
             
             <div>
                 
@@ -64,7 +71,12 @@
           </div><br>
             <div class="form-outline mb-4">
               <label class="form-label" for="form1Example23">Profile Picture</label><br>
-              <img src="/images/{{data.Image}}" class="rounded-circle" alt="profile pic">
+            <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
+              <img src="/images/{{data.Image}}"
+                alt="profile pic" class="img-fluid img-thumbnail mt-1 mb-2"
+                style="width: 150px; z-index: 1">
+                
+            </div>
            <input type="file" name="Testimage" accept="image/jpeg"/><br>      
           </div>
         <div class="form-outline mb-4">
