--- a/views/view.hbs
+++ b/views/view.hbs
@@ -9,7 +9,7 @@
 
 <body>
    <div style="float:left; margin-left: 100px; margin-top:50px;"> 
- <a href="/dashboard">
+ <a href="/student/dashboard">
     <button type="button" class="btn btn-info"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
 </svg> Back</button>
@@ -68,40 +68,11 @@
            
           </div>
           <br>
-         <div class="form-outline mb-4" >
-            <label class="form-label" for="form1Example23">Profile Picture</label>
-              <img src="/images/{{data.Image}}" class="rounded-circle" alt="profile pic" style="margin-left: 100px ;">
-          </div>
            <br>
          </div>
     </div>
   </div>
 </section>
-            </div>
-            {{!-- <div class="d-flex justify-content-between align-items-center mb-4">
-              <p class="lead fw-normal mb-0">Recent photos</p>
-              <p class="mb-0"><a href="#!" class="text-muted">Show all</a></p>
-            </div>
-            <div class="row g-2">
-              <div class="col mb-2">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(112).webp"
-                  alt="image 1" class="w-100 rounded-3">
-              </div>
-              <div class="col mb-2">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(107).webp"
-                  alt="image 1" class="w-100 rounded-3">
-              </div>
-            </div>
-            <div class="row g-2">
-              <div class="col">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(108).webp"
-                  alt="image 1" class="w-100 rounded-3">
-              </div>
-              <div class="col">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/Lightbox/Original/img%20(114).webp"
-                  alt="image 1" class="w-100 rounded-3">
-              </div> --}}
-            </div>
           </div>
         </div>
       </div>
