--- a/views/includes/links.ejs
+++ b/views/includes/links.ejs
@@ -10,7 +10,7 @@
  
   <style>
     .pagination {
-      text-align: center;
+      text-align: center; 
       float:right;
       margin-right: 800px;
       margin-top: 2rem;
@@ -18,21 +18,22 @@
     .pagination a {
       
       text-decoration: none;
-      color: rgba(19, 180, 36, 0.534);
+      color:  rgba(19, 180, 35, 0.865);
       padding: 0.5rem;
-      border: 1px solid  rgba(19, 180, 36, 0.534);
+      border: 1px solid  rgba(19, 180, 35, 0.865);
       margin: 0.1rem;
     }
     .pagination a:hover,
     .pagination a:active,
     .pagination a.active {
-      background: rgba(19, 180, 36, 0.534);
+      background: rgba(19, 180, 35, 0.865);
       color: white;
     }
     h2 {
-      margin-top: 50px;
-      margin-bottom: 10px;
-      color: rgba(16, 159, 47, 0.4) ;
+      text-align: center; 
+      /* margin-top: 50px; */
+      /* margin-bottom: 10px; */
+      color:  rgba(19, 180, 35, 0.865);
     }
   </style>
 </head>
