--- a/views/branch.ejs
+++ b/views/branch.ejs
@@ -1,39 +1,30 @@
-<html>
-    <head>
-        <title>Branch</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    
-  </head>
-
+<%- include('includes/links.ejs') %>
 <body>
 <%- include('includes/nav2.ejs') %>
+<%- include('includes/back.ejs') %>
+<main >
 
-<main>
-    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="mask d-flex align-items-center gradient-custom-3" style="margin-top: 100px;">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Add Branch/Class</h2>
-
         <form method="post" action="/student/branch" class="was-validated">
                 <div class="form-outline mb-4">
             <label class="form-label" for="validateField">Branch Name</label>
             <input type="text" id="validateField" class="form-control form-control-lg" name="branch" placeholder="Enter Branch Name" required autofocus/>
                 </div>
                 <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-success btn-block">Add</button>
+            <button type="submit" class="btn btn-success btn-lg btn-block">Add</button>
                 </div>  
               </form>
-        <a href="/student/dashboard">
+        <!-- <a href="/student/dashboard">
         <button type="button" class="btn btn-success btn-block"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
         </svg> Back</button>
-        </a>  
+        </a>   -->
 
             </div>
           </div>
