--- a/views/includes/messages.ejs
+++ b/views/includes/messages.ejs
@@ -1,29 +1,36 @@
 <% if(locals.errors){ %> <% errors.forEach(function(error) { %>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <div class="alert alert-warning alert-dismissible fade show" role="alert" id="classname">
       <%= error.msg %>
       <button type="button" class="btn-close" data-bs-dismiss="alert">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <% }); %> <% } %> <% if(success_msg != ''){ %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <div class="alert alert-success alert-dismissible fade show" role="alert" id="classname">
       <%= success_msg %>
        <button type="button" class="btn-close" data-bs-dismiss="alert">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <% } %> <% if(error_msg != ''){ %>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert" id="classname">
       <%= error_msg %>
       <button type="button" class="btn-close" data-bs-dismiss="alert">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <% } %> <% if(error != ''){ %>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert" id="classname">
       <%= error %>
       <button type="button" class="btn-close" data-bs-dismiss="alert">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
     <% } %>
+    <script>
+      const timeout = document.getElementById('classname')
+      setTimeout(hideElement, 1000) //milliseconds until timeout.//
+      function hideElement() {
+        timeout.style.display = 'none'
+      }
+    </script>
