--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/links.ejs') %>
-<%- include('includes/navbar.ejs') %>
+
 <body>
 <main>
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
@@ -9,15 +9,9 @@
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Login</h2>
-              <%- include('includes/messages.ejs') %>
+              
         <form method="post" action="/auth/login" class="was-validated">
-          <% if(status === true) { %>
-            <div class="alert alert-success alert-success alert-dismissible">
-              <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-              <strong>Successfully Registered!</strong>
-            </div>
-         <% } %>
-
+          <%- include('includes/messages.ejs') %> 
                 <div class="form-outline mb-4">
             <label class="form-label" for="validateemail">Email address</label>
             <input type="email" id="validateemail" class="form-control form-control-lg" name="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" autofocus required/>
@@ -25,11 +19,11 @@
 
                 <div class="form-outline mb-4">
             <label class="form-label" for="validatepassword">Password</label>
-            <input type="password" id="validatepassword" class="form-control form-control-lg" name="password" pattern=".{8,12}" required />
+            <input type="password" id="validatepassword" class="form-control form-control-lg" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,12}" required />
             <input type="checkbox"   style="margin-top: 12px;" onclick="Toggle()">
             Show Password
                 </div>
-
+                  <p><a href="/auth/forgot" class="text-success">Forgot password?</a></p>
                 <div class="d-flex justify-content-center">
                   <button type="submit"
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Login</button>
@@ -51,7 +45,7 @@
 
     </body>
     <script>
-      // Change the type of input to password or text
+      // Show Password
       function Toggle() {
           var temp = document.getElementById("validatepassword");
           if (temp.type === "password") {
