--- a/views/newstudent.ejs
+++ b/views/newstudent.ejs
@@ -1,20 +1,7 @@
-<html>
-    <head>
-        <title>Add Student</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    
-  </head>
-
+<%- include('includes/links.ejs') %>
 <body>
-<% include('includes/nav2.ejs') %>
-          <a href="/student/dashboard">
-        <button type="button" class="btn btn-success btn-block"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
-        </svg> Back</button>
-        </a>  
+ <%- include('includes/nav2.ejs') %>
+ <%- include('includes/back.ejs') %>
 <main>
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
@@ -22,11 +9,11 @@
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
-               <h2 class="text-uppercase text-center mb-5">New Student</h2>
+             <h2 class="text-uppercase text-center mb-5">New Student</h2>
              <form method="post" action="/student/addstudent" enctype="multipart/form-data" class="was-validated">
                 <div class="form-outline mb-4">
             <label class="form-label" for="validateField">Name</label>
-            <input type="text" id="validateField" class="form-control form-control-lg" name="name" placeholder="Enter your name" required autofocus/>
+            <input type="text" id="validateField" class="form-control form-control-lg" name="name" placeholder="Enter your name" pattern="^[a-zA-Z ]*$" required autofocus/>
                 </div>  
                 <div class="form-outline mb-4">
             <label class="form-label" for="validateField">Address</label>
@@ -50,8 +37,8 @@
 
           </div>                       
           <div class="form-outline mb-4">
-            <label class="form-label" for="validateField">Dob</label>
-            <input type="date" id="validateField" class="form-control form-control-lg" name="dob"  required/>
+            <label class="form-label" for="validateField">Date Of Birth</label>
+            <input type="date" id="validateField" class="form-control form-control-lg" name="dob" min="1970-01-01" max="2010-12-31" required/>
                          </div>
                             <div class="form-outline mb-4">
             <label class="form-label" for="validateField">Profile picture</label>
