--- a/views/update.ejs
+++ b/views/update.ejs
@@ -1,22 +1,10 @@
-<html>
-    <head>
-        <title>edit student</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-      label{
-        text-transform:capitalize;
-        
-      }
-    </style>
-  </head>
-
+<%- include('includes/links.ejs') %>
 <body>
   <%- include('includes/nav2.ejs') %>
+  <%- include('includes/back.ejs') %>
 <main>
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
@@ -24,14 +12,14 @@
             <div class="card-body p-5">
                <h2 class="text-uppercase text-center mb-5">Update Student</h2>
              <div class="ms-4 mt-5 d-flex flex-column" style=" width: 150px;">
-              <img src="/images/<%= data.Image %>"
+              <img id="blah" src="/images/<%= data.Image %>"
                 alt="profile pic" class="img-fluid img-thumbnail mt-1 mb-2"
                 style="width: 150px; z-index: 1">
             </div>
              <form method="post" action="/student/updated/<%= data._id %>" enctype="multipart/form-data" class="was-validated">
                 <div class="form-outline mb-4">
             <label class="form-label " for="validateField">Name</label>
-            <input type="text" id="validateField" class="form-control form-control-lg" name="name" value="<%= data.name %>" required/>
+            <input type="text" id="validateField" class="form-control form-control-lg" name="name" value="<%= data.name %>" pattern="^[a-zA-Z ]*$" required/>
                 </div>  
                 <div class="form-outline mb-4">
            <label class="form-label" for="validateField">Address</label>
@@ -56,16 +44,29 @@
           </div>                       
                          <div class="form-outline mb-4">
             <label class="form-label" for="form1Example23">Dob</label>
-            <input type="date" id="form1Example23" class="form-control form-control-lg" name="dob" value="<%= data.dob %>" required/>
+            <input type="date" id="form1Example23" class="form-control form-control-lg" name="dob" value="<%= data.dob %>" min="1970-01-01" max="2010-12-31" required/>
                          </div>
                             <div class="form-outline mb-4">
-                              <input type="file" name="Testimage" class="form-control"  id="validateField" accept="image/jpeg"  required/><br> 
+                              <input type="file" name="Testimage" class="form-control"  id="validateField" accept="image/jpeg"  onchange="readURL(this)"/><br>
+                             
                             </div>
                                <div class="form-outline mb-4">
    <button type="submit" class="btn btn-success btn-lg btn-block">Update</button>
                                </div>
               </form>
+              <script>
+                function readURL(input) {
+  if (input.files && input.files[0]) {
+    var reader = new FileReader();
 
+    reader.onload = function (e) {
+      $('#blah').attr('src', e.target.result).width(150).height(200);
+    };
+
+    reader.readAsDataURL(input.files[0]);
+  }
+}
+              </script>
 
             </div>
           </div>
