--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,20 +1,7 @@
-<html>
-    <head>
-        <title>view student</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-      label{
-        text-transform:capitalize;
-        
-      }
-    </style>
-  </head>
-
+<%- include('includes/links.ejs') %>
 <body>
  <%- include('includes/nav2.ejs') %>
+ <%- include('includes/back.ejs') %>
 <main>
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
