--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -3,8 +3,14 @@
 <%- include('includes/links.ejs') %>
 
 <body>
+
 <main>
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+      <div class="bg-light text-success" style="margin-left: 10px;">
+        <a href="/auth/login"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-arrow-left-circle" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+        </svg></a>
+        </div>
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
@@ -23,6 +29,7 @@
                   <button type="submit"
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Send to mail</button>
                 </div>
+            </div>
               </form>
             </div>
           </div>
