--- a/views/update.ejs
+++ b/views/update.ejs
@@ -10,7 +10,7 @@
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
-               <h2 class="text-uppercase text-center mb-5">Update Student</h2>
+               <h2 class="text-uppercase text-center mb-5">Edit Student</h2>
              <div class="ms-4 mt-5 d-flex flex-column" style=" width: 150px;">
               <img id="blah" src="/images/<%= data.Image %>"
                 alt="profile pic" class="img-fluid img-thumbnail mt-1 mb-2"
